--- a/index.html
+++ b/index.html
@@ -143,16 +143,17 @@
     <div id="map"></div>
     <div id="info-panel-toggle">i</div>
     <div id="info-panel">
-        <h2>Forklaring på kortet</h2>
-        <p>Dette kort er lavet med data, som er taget fra databasen over faldne sønderjyder fra denstorekrig1914-1918.dk.</p>
+       <h2>Forklaring på kortet</h2>
+        <p>Dette kort er lavet med data fra 10/11 2021, som er taget fra databasen over faldne sønderjyder fra denstorekrig1914-1918.dk.</p>
         <p>Den Store Krig er en hjemmeside, som bliver drevet af Museum Sønderjylland </p>
         <p>Dette kort-projektet er ikke forbundet på nogen måde, med hverken hjemmesiden eller museet bagved, Museum Sønderjylland.</p>
         <p>Jeg har valgt at arbejde med dataene for jeg fandt det meget spændende.</p>
         <p>Kortet er kun muligt fordi der har siddet en masse frivilige, som har lavet en database som jeg har kunne visualiser.</p>
         <p>Klik på linket, og lær mere fra deres hjemmesiden, og støt dem.</p>
-        <p><a href="https://denstorekrig1914-1918.dk/faldne-lister/liste-over-faldne-1914-1918/" target="_blank">https://denstorekrig1914-1918.dk/faldne-lister/liste-over-faldne-1914-1918/</a></p>
-        <p>Angående copyright, så følger jeg CC-BY-NC-SA fra <a href="https://pitt.libguides.com/copyright/licenses" target="_blank">https://pitt.libguides.com/copyright/licenses</a></p>
-    </div>
+        <p>https://denstorekrig1914-1918.dk/faldne-lister/liste-over-faldne-1914-1918/ </p>
+        <p>Copyright: CC-BY-NC-SA</p>
+        <p>https://pitt.libguides.com/copyright/licenses</p>
+        </div>
     <div id="footer">Lavet af Erik Luis Lanuza Oehlerich - erikoehlerich@gmail.com</div>
 
     <!-- Leaflet JavaScript -->
